--- a/src/app/user-setup/user-setup.component.html
+++ b/src/app/user-setup/user-setup.component.html
@@ -15,4 +15,8 @@
       </tr>
     </ng-template>
   </p-table>
+  <div class="buttons">
+    <button pButton label="Apply Changes"></button>
+    <button pButton label="Cancel" class="ui-button-secondary"></button>
+  </div>
 </div>
