--- a/src/app/navbar/navbar.component.less
+++ b/src/app/navbar/navbar.component.less
@@ -7,9 +7,7 @@
     margin-top: 10px;
     margin-left: 15px;
     margin-right: 15px;
-    .buttons {
 
-    }
     .right-align {
         flex: 1 1 auto;
         display: flex;
@@ -19,6 +17,12 @@
     }
     .login-info {
         margin-right: 15px;
+        display: flex;
+        align-items: center;
+        input {
+            font-size: 15px;
+            height: 30px;
+        }
     }
 }
 
