--- a/src/styles.less
+++ b/src/styles.less
@@ -5,3 +5,17 @@
 body {
     font-family: 'Roboto', sans-serif;
 }
+
+.ui-keyboard-button {
+    height: 5em !important;
+    min-width: 5em !important;
+    span {
+        font-size: 1.5em !important;
+    }
+}
+
+.ui-keyboard-actionkey {
+    height: 5em !important;
+    min-width: 10em !important;
+}
+
