--- a/src/app/navbar/navbar.component.less
+++ b/src/app/navbar/navbar.component.less
@@ -20,6 +20,7 @@
         display: flex;
         align-items: center;
         input {
+            margin-left: 10px;
             font-size: 15px;
             height: 30px;
         }
