--- a/src/app/pallet-info/pallet-info.component.html
+++ b/src/app/pallet-info/pallet-info.component.html
@@ -1,52 +1,54 @@
 <div class="pallet-info">
   <div>
-      <span>Pallet Scan</span>
-      <div class="status">
-        {{status}}
-      </div>
+    <span>Pallet Scan</span>
+    <div class="status">
+      {{status}}
+    </div>
   </div>
   <div class="data-line">
     <div class="data-el">
-        <span>Pallet Id</span>
-        <div class="data-box">
-          {{palletId}}
-        </div>
+      <span>Pallet Id</span>
+      <div class="data-box">
+        {{palletId}}
+      </div>
     </div>
     <div class="data-el">
-        <span>Pallet Status</span>
-        <div class="data-box">
-          {{palletStatus}}
-        </div>
+      <span>Pallet Status</span>
+      <div class="data-box">
+        {{palletStatus}}
+      </div>
     </div>
     <div class="data-el">
-        <span>Wrap Enable</span>
-        <div class="data-box">
-          {{wrapEnable}}
-        </div>
+      <span>Wrap Enable</span>
+      <input [(ngModel)]="wrapEnable" (focus)="onWrapEnabledFocus()" type="text" class="wrap-enable">
+      <input style="display: none" id="keyboard-wrapenable" type="text">
     </div>
-    
+
   </div>
   <div class="alarm">
     <span>Alarms</span>
     <div class="alarm-box"></div>
   </div>
   <div class="system">
-      <span>System</span>
-      <div class="status">
-        {{system}}
-      </div>
+    <span>System</span>
+    <div class="status">
+      {{system}}
+    </div>
   </div>
 
   <div class="controls">
-    <div (click)="start()" class="circle-button green">
+    <div class="circle-button green">
+      <div (click)="start()" class="button-area"></div>
+      <div *ngIf="wcsService.started || wcsService.userId.length === 0 || !wcsService.systemReady" class="disable-overlay"></div>
       <span>Start</span>
       <span>Scan</span>
     </div>
-    <div (click)="stop()" class="circle-button red">
-        <span>Stop</span>
-        <span>Scan</span>
+    <div class="circle-button red">
+      <div (click)="stop()" class="button-area"></div>
+      <span>Stop</span>
+      <span>Scan</span>
     </div>
-      
+
   </div>
 
 </div>
