--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -8,7 +8,7 @@
     display: flex;
     flex-wrap: wrap;
     .left-pane {
-        flex: 1 1 auto;
+        flex: 2;
         display: flex;
         flex-direction: column;
         margin: 5px;
@@ -20,10 +20,12 @@
     }
 
     .right-pane {
-        flex: 0 0 200px;
+        flex: 2;
         margin: 5px;
-        flex: 1 1 auto;
         display: flex;
-        
+        box-shadow: 0 5px 5px 0 rgba(0,0,0,.25);
+        border: 1px solid rgb(200,200,200);
+        border-radius: 5px;
+        border-radius: 5px;
     }
 }
