--- a/src/app/navbar/navbar.component.less
+++ b/src/app/navbar/navbar.component.less
@@ -16,17 +16,28 @@
 
     }
     .login-info {
-        margin-right: 15px;
+        margin-right: 8px;
         display: flex;
         align-items: center;
         input {
-            margin-left: 10px;
-            font-size: 15px;
+            text-align: center;
+            margin-left: 5px;
+            font-size: 10px;
             height: 30px;
         }
     }
 }
 
 button {
-    margin: 5px;
+    margin: 2px;
+
 }
+
+.ui-button {
+    padding: 0;
+    font-size: 10px;
+    .ui-button-text .ui-clickable {
+        padding: 0 !important;
+    }
+}
+
