--- a/src/app/pallet-info/pallet-info.component.less
+++ b/src/app/pallet-info/pallet-info.component.less
@@ -2,9 +2,7 @@
     flex: 1 1 auto;
     display: flex;
     flex-direction: column;
-    box-shadow: 0 5px 5px 0 rgba(0,0,0,.25);
     border-radius: 5px;
-    border: 1px solid rgb(200,200,200);
     padding: 10px;
 }
 
@@ -27,21 +25,23 @@
     display: flex;
     
     .data-el {
-        margin-right: 5px;
-        flex: 0 0 32.8%;
+        margin-right: 0px;
+        flex: 3;
         display: inline-block;
         .data-box {
-            border: 1px solid rgb(200,200,200);
+            margin: 0px 5px;
+            border: 1px solid rgb(190,190,190);
             height: 35px;
             display: flex;
             align-items: center;
             justify-content: center;
+            font-size: 12px;
         }
 
         .wrap-enable {
             height: 35px;
             text-align: center;
-            font-size: 16px;
+            font-size: 12px;
         }
     }
 }
@@ -70,8 +70,8 @@
 }
 
 .circle-button {
-    height: 125px;
-    width: 125px;
+    height: 105px;
+    width: 105px;
     border-radius: 50%;
     display: inline-block;
     margin: 20px;
@@ -98,7 +98,7 @@
 
     cursor: pointer;
     span {
-        font-size: 28px;
+        font-size: 20px;
     }
   }
 
