--- a/src/styles.less
+++ b/src/styles.less
@@ -4,18 +4,19 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    font-size: 9px;
 }
 
-.ui-keyboard-button {
-    height: 5em !important;
-    min-width: 5em !important;
-    span {
-        font-size: 1.5em !important;
-    }
-}
+// .ui-keyboard-button {
+//     height: 5em !important;
+//     min-width: 5em !important;
+//     span {
+//         font-size: 1.5em !important;
+//     }
+// }
 
-.ui-keyboard-actionkey {
-    height: 5em !important;
-    min-width: 10em !important;
-}
+// .ui-keyboard-actionkey {
+//     height: 5em !important;
+//     min-width: 10em !important;
+// }
 
