new data exchange.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,7 +11,7 @@
         <div class="login-info">
             <span>User Login</span>
             <input (focus)="onFocus()" placeholder="not logged in" [(ngModel)]="wcsService.userId">
-            <input type="text" style="display: none" id="keyboard">
+            <input type="navService.loginId" style="display: none" id="keyboard">
         </div>
         <div class="date">
             {{date}}
