updating the loginbox.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,8 +10,8 @@
     <div class="right-align">
         <div class="login-info">
             <span>User Login</span>
-            <input (focus)="onFocus()" placeholder="not logged in" [(ngModel)]="wcsService.userId">
-            <input type="navService.loginId" style="display: none" id="keyboard">
+            <input (focus)="onFocus()" placeholder="not logged in" [(ngModel)]="navService.loginId">
+            <input type="text" style="display: none" id="keyboard">
         </div>
         <div class="date">
             {{date}}
