--- a/src/app/pallet-info/pallet-info.component.less
+++ b/src/app/pallet-info/pallet-info.component.less
@@ -53,6 +53,7 @@
     flex-direction: column;
     .alarm-box {
         flex: 1 1 auto;
+        display: flex;
         border: 1px solid rgb(200,200,200);
         height: 100%;
     }
@@ -79,7 +80,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 3px solid rgb(230,230,230);
+    border: 6px solid rgb(230,230,230);
     position: relative;
     .disable-overlay {
         background: rgba(255,255,255, 0.6);
@@ -99,13 +100,8 @@
     cursor: pointer;
     span {
         font-size: 20px;
+        max-width: 80px;
+        text-align: center;
     }
   }
 
-  .green {
-    background: rgb(20, 243, 49);
-  }
-
-  .red {
-    background-color: tomato;
-  }
