--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,18 @@
     <main class="content" [@fadeAnimation]="o.isActivated ? o.activatedRoute : ''">
         <router-outlet #o="outlet"></router-outlet>
     </main>
+    <p-dialog [modal]="true" [(visible)]="showPopup">
+        <p-header>
+          
+        </p-header>
+            <span class="popup-content">
+                {{popupData.data}}
+            </span>
+          
+        <p-footer>
+          <button class="popup-button" *ngFor="let button of popupData.buttons" (click)="popupButtonClicked(button)">{{button.data}}</button>
+        </p-footer>
+      </p-dialog>
 </div>
 
 
