--- a/src/app/user-setup/user-setup.component.html
+++ b/src/app/user-setup/user-setup.component.html
@@ -10,13 +10,27 @@
     <ng-template pTemplate="body" let-user>
       <tr>
         <td>{{user.user}}</td>
-        <td style="text-align: center"><p-checkbox [(ngModel)]="user.allowWrapEnable" binary="true"></p-checkbox></td>
-        <td style="text-align: center"><p-checkbox [(ngModel)]="user.admin" binary="true"></p-checkbox></td>
+        <td style="text-align: center" [ngClass]="{ changed: user.allowWrapEnableChanged }">
+          <p-checkbox (onChange)="userAllowWrapEnableChanged($event, user)" [(ngModel)]="user.allowWrapEnable" binary="true"></p-checkbox>
+        </td>
+        <td style="text-align: center" [ngClass]="{ changed: user.adminChanged }">
+          <p-checkbox (onChange)="userAdminChanged($event, user)" [(ngModel)]="user.admin" binary="true"></p-checkbox>
+        </td>
       </tr>
     </ng-template>
   </p-table>
   <div class="buttons">
-    <button pButton label="Apply Changes"></button>
-    <button pButton label="Cancel" class="ui-button-secondary"></button>
+    <button pButton [disabled]="!applyEnabled" (click)="applyClicked()" label="Apply Changes"></button>
+    <button pButton (click)="cancelClicked()" label="Cancel" class="ui-button-secondary"></button>
   </div>
+  <p-dialog [modal]="true" [(visible)]="showPasswordDialog">
+    <p-header>
+      Enter Password
+    </p-header>
+      <input [(ngModel)]="password" type="password">
+    <p-footer>
+      <button pButton [disabled]="password === ''" (click)="passwordSubmit()" label="Ok"></button>
+      <button pButton (click)="cancelPasswordDialog()" label="Cancel" class="ui-button-secondary"></button>
+    </p-footer>
+  </p-dialog>
 </div>
