--- a/src/styles.less
+++ b/src/styles.less
@@ -20,3 +20,10 @@ body {
 //     min-width: 10em !important;
 // }
 
+.ui-dialog-content {
+    input {
+        height: 35px;
+        width: 100%;
+        font-size: 18px;
+    }
+}
