--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,17 +3,18 @@
     <main class="content" [@fadeAnimation]="o.isActivated ? o.activatedRoute : ''">
         <router-outlet #o="outlet"></router-outlet>
     </main>
-    <p-dialog [modal]="true" [(visible)]="showPopup">
+    <p-dialog [showHeader]="false" [contentStyle]="{ 'background-color': popupData?.backgroundcolor, 'color': popupData?.textcolor, 'border-color': popupData?.bordercolor }"  [modal]="true" [(visible)]="showPopup">
         <p-header>
           
         </p-header>
+        <div class="popup-content">
             <span class="popup-content">
-                {{popupData.data}}
-            </span>
-          
-        <p-footer>
-          <button class="popup-button" *ngFor="let button of popupData.buttons" (click)="popupButtonClicked(button)">{{button.data}}</button>
-        </p-footer>
+                {{popupData?.data}}
+            </span>  
+        </div>
+        <div class="popup-footer">
+            <button [ngStyle]="{ 'background-color': button?.buttoncolor, 'color': button?.textcolor }" class="popup-button" *ngFor="let button of popupData?.buttons" (click)="popupButtonClicked(button)">{{button.data}}</button>
+        </div>
       </p-dialog>
 </div>
 
