--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -34,5 +34,14 @@
   border: 1px solid black;
   height: 35px;
   font-size: 18px;
+  cursor: pointer;
+}
+
+.popup-footer {
+  text-align: right;
+  padding: 30px 0 0 0;
+  button {
+    margin-left: 10px;
+  }
 }
 
