--- a/src/app/io-monitor/io-monitor.component.html
+++ b/src/app/io-monitor/io-monitor.component.html
@@ -38,7 +38,7 @@
       <span>Red Beacon</span>
     </div>
     <div class="item">
-        <div class="indicator" [ngStyle]="{'background-color': data?.greenBeacon }"></div>
+        <div class="indicator" [ngStyle]="{'background-color': data?.greanBeacon }"></div>
         <span>Green Beacon</span>
       </div>
 
