--- a/src/app/pallet-info/pallet-info.component.less
+++ b/src/app/pallet-info/pallet-info.component.less
@@ -29,7 +29,7 @@
         flex: 3;
         display: inline-block;
         .data-box {
-            margin: 0px 5px;
+            margin: 0px 5px 0px 0px;
             border: 1px solid rgb(190,190,190);
             height: 35px;
             display: flex;
