removed enter key from keyboard and changed color of accept/cancel buttons.

--- a/src/styles.less
+++ b/src/styles.less
@@ -15,10 +15,13 @@ body {
 //     }
 // }
 
-// .ui-keyboard-actionkey {
-//     height: 5em !important;
-//     min-width: 10em !important;
-// }
+.ui-keyboard-accept {
+    background: rgb(0, 255, 0) !important;
+}
+
+.ui-keyboard-cancel {
+    background: gray !important;
+}
 
 .ui-dialog-content {
     input {
